--- a/ProjetoUNIPÊ/assets/css/index.css
+++ b/ProjetoUNIPÊ/assets/css/index.css
@@ -1,30 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@400;800&family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root{
 font-family: 'Share Tech Mono', monospace;
 }
 body {
-    background: fixed;
-    background-color: #240d56;
+    color: white;
+    background-color: #eae8ef;
 }
+/* NAVEGATION */
 header {
-    height: 9vh;
-    background-color:#fafafa00;
+    height: 9.5vh;
+    background: linear-gradient(to right, #000000, #13185a,#ffffff00 );
     display: flex;
     align-items: center;
     justify-content: space-around;
     border-bottom: 1px solid white ;
-}
-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
 }  
 #navegation ul {
     list-style: none;
@@ -39,13 +35,31 @@ video {
     border-bottom: white solid 1px;
     
 }
+#slogan {
+    color: white;
+    font-size: 2.5rem;
+    font-family: 'Major Mono Display', monospace;
+}
+/* VIDEO */
+video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+/* Botões de login / registro */
+
 .top-section-right,.top-section-right-btn-entrar > .btn,.top-section-right > .top-section-right-border-btn > .btn {
     font-family: 'Share Tech Mono', monospace;
     font-weight: 600;
     padding: 7px;
     color: white;
     background-color: #fafafa00;
-    border-radius: 0.7rem;
+    border-radius: 10px;
     border: none;
     transition: 0.5s;
 }
@@ -58,27 +72,123 @@ video {
     border-right: white solid 1px;
 }
 .top-section-right > .entrar{
-    margin-left: .4rem;
+    margin-left: 4rem;
 }
 .top-section-right, .top-section-right-btn-entrar > .btn:hover,.top-section-right > .top-section-right-border-btn > .btn:hover{
     cursor: pointer;
     scale: 1.1;
 }
 .top-section-right-btn-entrar > .btn:hover,.top-section-right-border-btn > .btn:hover{
-    color: black;
-    background-color: white;
+    color: white;
+    border: white solid 1px;
 }
+
+/* INTRO */
 #intro {
     display: flex;
+    background: fixed;
+    padding-top: 3rem;
+    margin-left: 2rem;
+}
+#textdescrition {
+    width: 40%;
+    margin: 3rem; 
+}
+div section #textslogan{
+    margin-bottom: 2.5rem;
+}
+#textdescrition p {
+    margin-bottom: 1rem; 
 }
 #textdescrition h1{
     color: white;
-    font-size: 10px;
-    margin-left: 10px;
-    font-size: 20px;
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
 }
-#slogan {
+.button-saiba-mais{
+    margin-top: 1.5rem;
+    background-color: #ffffff00;
     color: white;
-    font-size: 50px;
-    font-family: 'Major Mono Display', monospace;
+    font-size: 1rem;
+    border: solid 1.5px white;
+    border-radius: 10px;
+    text-decoration: none;
+    padding: 0.8rem 1rem 0.8rem 1rem;
+    transition: 0.2s;
+}
+.button-saiba-mais:hover {
+    scale: 1.1;
+}
+/* SERVICES */
+#services{
+    display: flex;
+    flex-direction: column;
+    
+    color: #000000;
+}
+#services h2{
+    text-align: center;
+    margin: 5rem;
+}
+.icones {
+    display: flex;
+    text-align: center;
+    margin-bottom: 5rem;
+}
+.icones p{
+    margin-top: 1.5rem;
+}
+.icons-services{
+    width: 33.3%;
+}
+.fa-solid {
+    background-color: rgb(16, 32, 114);
+    font-size: 40px;
+    padding: 2rem;
+    border-radius: 100%;
+    color: white;
+}
+/*
+    footer
+*/
+
+footer{
+    background-color: white;
+    color: black;
+    border-top: solid black 1px;
+}
+.bottom-section {
+    display: flex;
+    height: 4.5rem;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 30px 0 30px;
+}
+.bottom-section-left, .bottom-section-right{
+    width: 45%;
+}
+.bottom-section-left{
+    display: flex;
+    justify-content: flex-end;
+}
+.bottom-section-right{
+    display: flex;
+    justify-content: flex-start;
+}
+.bottom-section-right-icons {
+    list-style: none;
+    font-size: 1.45rem;
+    display: flex;
+    column-gap: 1rem
+}
+.bottom-section-right-icons a {
+    color: black;
+    text-decoration: none;
+}
+.fa-brands{
+    transition: 0.2s;
+}
+.fa-brands:hover{
+    scale: 1.1;
+
 }
