--- a/ProjetoUNIPÊ/assets/css/sobrenos.css
+++ b/ProjetoUNIPÊ/assets/css/sobrenos.css
@@ -52,7 +52,34 @@ video {
     object-fit: cover;
     z-index: -1;
 }
-
+/* NAVEGATION */
+header {
+    height: 9.5vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border-bottom: 1px solid white ;
+}  
+#navegation ul {
+    list-style: none;
+    display: flex;
+    column-gap: 3rem;
+}
+#navegation a {
+    color: white;
+    text-decoration: none;
+}
+#navegation a:hover{
+    border-bottom: white solid 1px;
+    
+}
+#slogan {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    font-size: 2.5rem;
+    font-family: 'Major Mono Display', monospace;
+}
 /* Botões de login / registro */
 
 .top-section-right,.top-section-right-btn-entrar > a > .btn, .top-section-right > .top-section-right-btn-registrar > a > .btn {
@@ -86,113 +113,85 @@ video {
     color: white;
     border: white solid 1px;
 }
+/* CORPO */
 
-/* INTRO */
-#intro {
-    display: flex;
-    background: fixed;
-    padding-top: 3rem;
-    margin-left: 2rem;
-}
-#textdescrition {
+#textdescription {
+    padding-top: 6rem;
+    margin-left: 4rem;
     width: 40%;
-    margin: 5rem; 
-}
-div section #textslogan{
-    margin-bottom: 2.5rem;
-}
-#textdescrition p {
-    margin-bottom: 1rem; 
-}
-#textdescrition h1{
-    color: white;
-    font-size: 1.25rem;
-    margin-bottom: 1rem;
-}
-.button-saiba-mais{
-    margin-top: 1.5rem;
-    background-color: #ffffff00;
-    color: white;
-    font-size: 1rem;
-    border: solid 1.5px white;
-    border-radius: 10px;
-    text-decoration: none;
-    padding: 0.8rem 1rem 0.8rem 1rem;
-    transition: 0.2s;
-}
-.button-saiba-mais:hover {
-    scale: 1.1;
-}
-/* SERVICES */
-#services{
+    height: 100%;
+    height: 33.7rem;
     display: flex;
-    flex-direction: column;
-    
-    color: #000000;
 }
-#services h2{
-    text-align: center;
-    margin: 5rem;
+#texto h1{
+    margin-bottom: 2rem;
 }
-.icones {
-    display: flex;
-    text-align: center;
-    margin-bottom: 5rem;
+#texto p{
+    margin-bottom: 2rem ;
 }
-.icones p{
-    margin-top: 1.5rem;
-}
-.icons-services{
-    width: 33.3%;
-}
-.fa-solid {
-    background-color: rgb(16, 32, 114);
-    font-size: 40px;
-    padding: 2rem;
+/* FOOTER */
+footer {
+    margin-top: 4.36rem;
+    height: 14.5rem;
+    background: linear-gradient(to right, #000000, #13185a,#092be98e );
+    box-shadow: 0px -5px 8px rgba(26, 13, 143, 0.548);
+  }
+  
+  .fa-brands {
+    color: #fff;
+    font-size: 1.2rem;
+    border: 2px solid #fff;
+    padding: 0.6rem;
     border-radius: 100%;
-    color: white;
-}
-/*
-    footer
-*/
-
-footer{
-    background-color: white;
-    color: black;
-    border-top: solid black 1px;
-}
-.bottom-section {
+  }
+  
+  .fa-brands:hover {
+    background-color: #fff;
+    color: #24202B;
+    cursor: pointer;
+  }
+  
+  .footerInfo {
     display: flex;
-    height: 4.5rem;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin: 0 30px 0 30px;
-}
-.bottom-section-left, .bottom-section-right{
-    width: 45%;
-}
-.bottom-section-left{
-    display: flex;
-    justify-content: flex-end;
-}
-.bottom-section-right{
-    display: flex;
-    justify-content: flex-start;
-}
-.bottom-section-right-icons {
-    list-style: none;
-    font-size: 1.45rem;
-    display: flex;
-    column-gap: 1rem
-}
-.bottom-section-right-icons a {
-    color: black;
+    gap: 1.5rem;
+    color: #fff;
+    margin: 1rem 0;
+  }
+  
+  footer a {
+    color: #fff;
+    font-size: 1rem;
     text-decoration: none;
-}
-.fa-brands{
-    transition: 0.2s;
-}
-.fa-brands:hover{
-    scale: 1.1;
-
-}
+  }
+  
+  
+  .footerInfo span:hover {
+    cursor: pointer;
+    border-bottom: 2px solid #1f57aa;
+  }
+  
+  hr {
+    width: 99%;
+  }
+  .Info p{
+    margin-bottom: 10px;
+  }
+  .footerContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .socialIcons {
+    margin: 1rem 0;
+    gap: 1rem;
+    display: flex;
+  }
+  
+  .copyright {
+    color: #aaaaaa;
+    font-size: 0.8rem;
+  }
